# ros_programs

catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/include/begommer_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  (+2 more)
catkin_ws/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/src/anchor_serial/: CMakeLists.txt
catkin_ws/src/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
catkin_ws/src/begommer_tutorials/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/begommer_tutorials/catkin_generated/: begommer_tutorials-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws/src/begommer_tutorials/catkin_generated/installspace/: begommer_tutorials-msg-extras.cmake  begommer_tutorials-msg-paths.cmake  begommer_tutorials.pc  begommer_tutorialsConfig.cmake
catkin_ws/src/begommer_tutorials/cmake/: begommer_tutorials-genmsg-context.py  begommer_tutorials-genmsg.cmake
catkin_ws/src/begommer_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  hello_world.cpp
catkin_ws/src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
catkin_ws/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/anchor_serial/: CMakeLists.txt  package.xml
src/anchor_serial/include/: anchor_talker.h
src/anchor_serial/src/: anchor_main.cpp  anchor_talker.cpp  anchor_talker.py
src/beginner_tutorials/: package.xml
(+30 files in other folders)
